v8 ObjectTracker isn't tracking uncollected objects

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Blocker - P1
    • 2.4.2, 2.5.0
    • Affects Version/s: 2.4.1
    • Component/s: JavaScript
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      ObjTracker::track() fails to insert the tracked object into the set of tracked objects. This is causing memory to leak when script execution completes but the GC doesn't run.

            Assignee:
            Ben Becker (Inactive)
            Reporter:
            Ben Becker (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: