SERVER-9230: fix issue causing persistent v8 objects not to be tracked